Test documentation with tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,17 @@
 [tox]
-envlist = py25,py26,py27,pypy
+envlist = py25,py26,py27,pypy,docs
 
 [testenv]
 deps = 
 	attest
-commands = python runtests.py
+	sphinx
+commands =
+	python runtests.py
+	sphinx-build -W -b doctest docs docs/_build/doctest
+
+[testenv:docs]
+deps =
+	sphinx
+commands =
+	sphinx-build -W -b html docs docs/_build/doctest
+	sphinx-build -W -b linkcheck docs docs/_build/linkcheck
