--- a/tox.ini
+++ b/tox.ini
@@ -13,5 +13,5 @@ commands =
 deps =
 	sphinx
 commands =
-	sphinx-build -W -b html docs docs/_build/doctest
+	sphinx-build -W -b html docs docs/_build/html
 	sphinx-build -W -b linkcheck docs docs/_build/linkcheck
