--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,15 @@
 envlist = py25,py26,py27,pypy,docs
 
 [testenv]
-deps = 
-	attest
-	sphinx
+deps =
+ attest
+ sphinx
 commands =
-	python runtests.py
-	sphinx-build -W -b doctest docs docs/_build/doctest
+ python runtests.py
+ sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:docs]
-deps =
-	sphinx
+deps = sphinx
 commands =
-	sphinx-build -W -b html docs docs/_build/html
-	sphinx-build -W -b linkcheck docs docs/_build/linkcheck
+ sphinx-build -W -b html docs docs/_build/html
+ sphinx-build -W -b linkcheck docs docs/_build/linkcheck
