--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,9 @@ envlist = py25,py26,py27,pypy,docs
 
 [testenv]
 deps =
- attest
+# due to the way we use mixins, test names in previous versions are absolutely
+# unusable. As soon as 0.4 is released we can switch to that.
+ git+git://github.com/dag/attest.git
  sphinx
 commands =
  python runtests.py
