Add reason why we use development version of attest

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,10 @@ envlist = docs,py25,py26,py27,pypy
 
 [testenv]
 deps =
-# due to the way we use mixins, test names in previous versions are absolutely
-# unusable. As soon as 0.4 is released we can switch to that.
+# we use the development version for several reasons here:
+# - we want class names in test names due to the way we use mixins
+# - _if like conditional test inclusion
+# As soon as 0.4 is released we can switch to that.
  git+git://github.com/dag/attest.git
  sphinx
 commands =
