Run doctests only with Python>=2.6
The abstract examples rely on features not present in 2.5

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,21 @@ deps =
  sphinx
 commands =
  python runtests.py
+
+[testenv:py26]
+deps=
+ git+git://github.com/dag/attest.git
+ sphinx
+commands=
+ python runtests.py
+ sphinx-build -W -b doctest docs docs/_build/doctest
+
+[testenv:py27]
+deps=
+ git+git://github.com/dag/attest.git
+ sphinx
+commands=
+ python runtests.py
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:docs]
