--- a/tox.ini
+++ b/tox.ini
@@ -3,18 +3,14 @@ envlist = docs,py25,py26,py27,pypy
 
 [testenv]
 deps =
-# we use the development version for several reasons here:
-# - we want class names in test names due to the way we use mixins
-# - _if like conditional test inclusion
-# As soon as 0.4 is released we can switch to that.
- git+git://github.com/dag/attest.git
+ attest==0.4
  sphinx
 commands =
  python runtests.py
 
 [testenv:py26]
 deps=
- git+git://github.com/dag/attest.git
+ attest==0.4
  sphinx
 commands=
  python runtests.py
@@ -22,7 +18,7 @@ commands=
 
 [testenv:py27]
 deps=
- git+git://github.com/dag/attest.git
+ attest==0.4
  sphinx
 commands=
  python runtests.py
