Add Python 3.1 testenv

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,py25,py26,py27,pypy
+envlist = docs,py25,py26,py27,pypy,py31
 
 [testenv]
 deps =
@@ -23,6 +23,11 @@ deps=
 commands=
  python runtests.py
  sphinx-build -W -b doctest docs docs/_build/doctest
+
+[testenv:py31]
+deps=
+ attest==0.4
+ sphinx==dev
 
 [testenv:docs]
 deps = sphinx
