Make it possible to run tests selectively

--- a/tox.ini
+++ b/tox.ini
@@ -6,14 +6,14 @@ deps =
  attest==0.4
  sphinx
 commands =
- python runtests.py
+ python runtests.py []
 
 [testenv:py26]
 deps=
  attest==0.4
  sphinx
 commands=
- python runtests.py
+ python runtests.py []
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:py27]
@@ -21,7 +21,7 @@ deps=
  attest==0.4
  sphinx
 commands=
- python runtests.py
+ python runtests.py []
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:py31]
