We have to use setup.py test to translate everything with 2to3

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,9 @@ commands=
 deps=
  attest==0.4
  sphinx==dev
+commands=
+ python setup.py test
+ sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:docs]
 deps = sphinx
