--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,py25,py26,py27,pypy,py31
+envlist = docs,py25,py26,py27,pypy
 
 [testenv]
 deps =
@@ -23,13 +23,6 @@ deps=
 commands=
  python runtests.py []
  sphinx-build -W -b doctest docs docs/_build/doctest
-
-[testenv:py31]
-deps=
- attest==0.4
- sphinx==dev
-commands=
- python setup.py test
 
 [testenv:docs]
 deps = sphinx
