--- a/tox.ini
+++ b/tox.ini
@@ -4,28 +4,34 @@ envlist = docs,py25,py26,py27,pypy
 [testenv]
 deps =
  attest==0.4
- sphinx
 commands =
  python runtests.py []
+ python brownie/terminal.py
 
 [testenv:py26]
 deps=
  attest==0.4
  sphinx
+ sphinxcontrib-ansi
 commands=
  python runtests.py []
+ python brownie/terminal.py
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:py27]
 deps=
  attest==0.4
  sphinx
+ sphinxcontrib-ansi
 commands=
  python runtests.py []
+ python brownie/terminal.py
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:docs]
-deps = sphinx
+deps =
+ sphinx
+ sphinxcontrib-ansi
 commands =
  sphinx-build -W -b html docs docs/_build/html
  sphinx-build -W -b linkcheck docs docs/_build/linkcheck
