Add helper for execution context aware stacks
This is especially useful for context managers, there might be
other use cases. More documentation and a simple public API for
user mixin implementations is still required.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,py25,py26,py27,pypy
+envlist = docs,py25,py26,py27,pypy,eventlet,py26-eventlet,py27-eventlet
 
 [testenv]
 deps =
@@ -8,25 +8,46 @@ commands =
  python runtests.py []
  python brownie/terminal.py
 
+[testenv:eventlet]
+deps =
+ attest==0.4
+ eventlet
+commands=
+ python runtests.py context
+
 [testenv:py26]
-deps=
+deps =
  attest==0.4
  sphinx
  sphinxcontrib-ansi
-commands=
+commands =
  python runtests.py []
  python brownie/terminal.py
  sphinx-build -W -b doctest docs docs/_build/doctest
 
-[testenv:py27]
+[testenv:py26-eventlet]
 deps=
+ attest==0.4
+ eventlet
+commands =
+ python runtests.py context
+
+[testenv:py27]
+deps =
  attest==0.4
  sphinx
  sphinxcontrib-ansi
-commands=
+commands =
  python runtests.py []
  python brownie/terminal.py
  sphinx-build -W -b doctest docs docs/_build/doctest
+
+[testenv:py27-eventlet]
+deps =
+ attest==0.4
+ eventlet
+commands =
+ python runtests.py context
 
 [testenv:docs]
 deps =
