Fix visual terminal test
It doesn't work on 2.5 anymore because 2.5 doesn't support __main__.py
in packages but that shouldn't be a problem.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,6 @@ deps =
  attest==0.4
 commands =
  python runtests.py []
- python brownie/terminal.py
 
 [testenv:py26]
 deps=
@@ -15,7 +14,7 @@ deps=
  sphinxcontrib-ansi
 commands=
  python runtests.py []
- python brownie/terminal.py
+ python brownie/terminal
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:py27]
@@ -25,7 +24,7 @@ deps=
  sphinxcontrib-ansi
 commands=
  python runtests.py []
- python brownie/terminal.py
+ python brownie/terminal
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:docs]
