--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = docs,py25,py26,py27,pypy,eventlet,py26-eventlet,py27-eventlet
+envlist = docs,py25,py26,py27,pypy,eventlet,py26-eventlet,py27-eventlet,translitcodec,py26-translitcodec,py27-translitcodec
 
 [testenv]
 deps =
@@ -11,8 +11,15 @@ commands =
 deps =
  attest==0.4
  eventlet
-commands=
+commands =
  python runtests.py context
+
+[testenv:translitcodec]
+deps =
+ attest==0.4
+ translitcodec
+commands =
+ python runtests.py text
 
 [testenv:py26]
 deps =
@@ -25,11 +32,18 @@ commands =
  sphinx-build -W -b doctest docs docs/_build/doctest
 
 [testenv:py26-eventlet]
-deps=
+deps =
  attest==0.4
  eventlet
 commands =
  python runtests.py context
+
+[testenv:py26-translitcodec]
+deps =
+ attest==0.4
+ translitcodec
+commands =
+ python runtests.py text
 
 [testenv:py27]
 deps =
@@ -47,6 +61,13 @@ deps =
  eventlet
 commands =
  python runtests.py context
+
+[testenv:py27-translitcodec]
+deps =
+ attest==0.4
+ translitcodec
+commands =
+ python runtests.py text
 
 [testenv:docs]
 deps =
